Cleanup + bug fixes